--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Codopen",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 2,
   "description": "Easy-peasy debugging of all your codepen codepens!",
 
@@ -29,5 +29,7 @@
     "activeTab",
     "declarativeContent",
     "tabs"
-  ]
+  ],
+
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
